--- a/student_intervention/report.html
+++ b/student_intervention/report.html
@@ -11855,14 +11855,14 @@ graduate and the other where they will continue the college.</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[48]:</div>
+<div class="prompt input_prompt">In&nbsp;[65]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># TODO: Calculate number of students</span>
 <span class="n">n_students</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">student_data</span><span class="p">)</span>
 
 <span class="c1"># TODO: Calculate number of features</span>
-<span class="n">n_features</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">student_data</span><span class="o">.</span><span class="n">columns</span><span class="p">)</span>
+<span class="n">n_features</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">student_data</span><span class="o">.</span><span class="n">columns</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span>
 
 <span class="c1"># TODO: Calculate passing students</span>
 <span class="n">n_passed</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">student_data</span> <span class="p">[</span><span class="n">student_data</span><span class="p">[</span><span class="s1">&#39;passed&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;yes&quot;</span><span class="p">]</span> <span class="p">)</span>
@@ -11892,7 +11892,7 @@ graduate and the other where they will continue the college.</p>
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Total number of students: 395
-Number of features: 31
+Number of features: 30
 Number of students who passed: 265
 Number of students who failed: 130
 Graduation rate of the class: 67.09%
@@ -11918,7 +11918,7 @@ Graduation rate of the class: 67.09%
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[49]:</div>
+<div class="prompt input_prompt">In&nbsp;[66]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># Extract feature columns</span>
@@ -12000,7 +12000,7 @@ Feature values:
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[50]:</div>
+<div class="prompt input_prompt">In&nbsp;[67]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">def</span> <span class="nf">preprocess_features</span><span class="p">(</span><span class="n">X</span><span class="p">):</span>
@@ -12072,7 +12072,7 @@ Feature values:
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[51]:</div>
+<div class="prompt input_prompt">In&nbsp;[68]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># TODO: Import any additional functionality you may need here</span>
@@ -12085,7 +12085,7 @@ Feature values:
 <span class="n">num_test</span> <span class="o">=</span> <span class="n">X_all</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">-</span> <span class="n">num_train</span>
 
 <span class="c1"># TODO: Shuffle and split the dataset into the number of training and testing points above</span>
-<span class="n">spl</span> <span class="o">=</span> <span class="n">cross_validation</span><span class="o">.</span><span class="n">train_test_split</span><span class="p">(</span><span class="n">X_all</span><span class="p">,</span> <span class="n">y_all</span><span class="p">,</span> <span class="n">test_size</span><span class="o">=</span><span class="mf">0.4</span><span class="p">,)</span> 
+<span class="n">spl</span> <span class="o">=</span> <span class="n">cross_validation</span><span class="o">.</span><span class="n">train_test_split</span><span class="p">(</span><span class="n">X_all</span><span class="p">,</span> <span class="n">y_all</span><span class="p">,</span> <span class="n">train_size</span> <span class="o">=</span> <span class="mi">300</span><span class="p">,</span> <span class="n">random_state</span><span class="o">=</span><span class="mi">42</span><span class="p">)</span> 
 
 <span class="n">X_train</span> <span class="o">=</span> <span class="n">spl</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
 <span class="n">X_test</span> <span class="o">=</span> <span class="n">spl</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
@@ -12107,8 +12107,8 @@ Feature values:
 
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Training set has 237 samples.
-Testing set has 158 samples.
+<pre>Training set has 300 samples.
+Testing set has 95 samples.
 </pre>
 </div>
 </div>
@@ -12203,7 +12203,7 @@ Logistic regression requires that each data point be independent of all other da
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[52]:</div>
+<div class="prompt input_prompt">In&nbsp;[70]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">def</span> <span class="nf">train_classifier</span><span class="p">(</span><span class="n">clf</span><span class="p">,</span> <span class="n">X_train</span><span class="p">,</span> <span class="n">y_train</span><span class="p">):</span>
@@ -12277,7 +12277,7 @@ Logistic regression requires that each data point be independent of all other da
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[61]:</div>
+<div class="prompt input_prompt">In&nbsp;[71]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># from sklearn import model_A</span>
@@ -12323,59 +12323,59 @@ Logistic regression requires that each data point be independent of all other da
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Training a GaussianNB using a training set size of 100. . .
+Trained model in 0.0020 seconds
+Made predictions in 0.0000 seconds.
+F1 score for training set: 0.8467.
+Made predictions in 0.0010 seconds.
+F1 score for test set: 0.8029.
+Training a GaussianNB using a training set size of 200. . .
 Trained model in 0.0030 seconds
 Made predictions in 0.0010 seconds.
-F1 score for training set: 0.4396.
+F1 score for training set: 0.8406.
 Made predictions in 0.0010 seconds.
-F1 score for test set: 0.3125.
-Training a GaussianNB using a training set size of 200. . .
-Trained model in 0.0020 seconds
+F1 score for test set: 0.7244.
+Training a GaussianNB using a training set size of 300. . .
+Trained model in 0.0030 seconds
 Made predictions in 0.0020 seconds.
-F1 score for training set: 0.5294.
+F1 score for training set: 0.8038.
 Made predictions in 0.0010 seconds.
-F1 score for test set: 0.3916.
-Training a GaussianNB using a training set size of 237. . .
-Trained model in 0.0020 seconds
-Made predictions in 0.0010 seconds.
-F1 score for training set: 0.8148.
-Made predictions in 0.0010 seconds.
-F1 score for test set: 0.6974.
+F1 score for test set: 0.7634.
 Training a SVC using a training set size of 100. . .
-Trained model in 0.0040 seconds
-Made predictions in 0.0040 seconds.
-F1 score for training set: 0.8861.
-Made predictions in 0.0080 seconds.
-F1 score for test set: 0.7559.
-Training a SVC using a training set size of 200. . .
-Trained model in 0.0210 seconds
-Made predictions in 0.0070 seconds.
-F1 score for training set: 0.8841.
-Made predictions in 0.0070 seconds.
-F1 score for test set: 0.7698.
-Training a SVC using a training set size of 237. . .
-Trained model in 0.0130 seconds
-Made predictions in 0.0090 seconds.
+Trained model in 0.0030 seconds
+Made predictions in 0.0030 seconds.
 F1 score for training set: 0.8777.
-Made predictions in 0.0060 seconds.
-F1 score for test set: 0.7581.
+Made predictions in 0.0020 seconds.
+F1 score for test set: 0.7746.
+Training a SVC using a training set size of 200. . .
+Trained model in 0.0110 seconds
+Made predictions in 0.0090 seconds.
+F1 score for training set: 0.8679.
+Made predictions in 0.0050 seconds.
+F1 score for test set: 0.7815.
+Training a SVC using a training set size of 300. . .
+Trained model in 0.0240 seconds
+Made predictions in 0.0150 seconds.
+F1 score for training set: 0.8761.
+Made predictions in 0.0130 seconds.
+F1 score for test set: 0.7838.
 Training a LogisticRegression using a training set size of 100. . .
 Trained model in 0.0030 seconds
-Made predictions in 0.0010 seconds.
-F1 score for training set: 0.8919.
-Made predictions in 0.0010 seconds.
-F1 score for test set: 0.7586.
-Training a LogisticRegression using a training set size of 200. . .
-Trained model in 0.0050 seconds
-Made predictions in 0.0010 seconds.
-F1 score for training set: 0.8718.
-Made predictions in 0.0010 seconds.
-F1 score for test set: 0.7554.
-Training a LogisticRegression using a training set size of 237. . .
-Trained model in 0.0060 seconds
 Made predictions in 0.0000 seconds.
-F1 score for training set: 0.8676.
+F1 score for training set: 0.8593.
+Made predictions in 0.0000 seconds.
+F1 score for test set: 0.7647.
+Training a LogisticRegression using a training set size of 200. . .
+Trained model in 0.0080 seconds
+Made predictions in 0.0000 seconds.
+F1 score for training set: 0.8562.
 Made predictions in 0.0010 seconds.
-F1 score for test set: 0.7544.
+F1 score for test set: 0.7914.
+Training a LogisticRegression using a training set size of 300. . .
+Trained model in 0.0080 seconds
+Made predictions in 0.0010 seconds.
+F1 score for training set: 0.8468.
+Made predictions in 0.0010 seconds.
+F1 score for test set: 0.8060.
 </pre>
 </div>
 </div>
@@ -12412,24 +12412,24 @@ F1 score for test set: 0.7544.
 <tbody>
 <tr>
 <td style="text-align:center">100</td>
-<td style="text-align:center">0.0030</td>
+<td style="text-align:center">0.0020</td>
 <td style="text-align:center">0.0010</td>
-<td style="text-align:center">0.4396</td>
-<td style="text-align:center">0.3125</td>
+<td style="text-align:center">0.8467</td>
+<td style="text-align:center">0.8029</td>
 </tr>
 <tr>
 <td style="text-align:center">200</td>
-<td style="text-align:center">0.0020</td>
+<td style="text-align:center">0.0030</td>
 <td style="text-align:center">0.0010</td>
-<td style="text-align:center">0.5294</td>
-<td style="text-align:center">0.3916</td>
+<td style="text-align:center">0.8406</td>
+<td style="text-align:center">0.7244</td>
 </tr>
 <tr>
 <td style="text-align:center">300</td>
-<td style="text-align:center">0.0020</td>
+<td style="text-align:center">0.0030</td>
 <td style="text-align:center">0.0010</td>
-<td style="text-align:center">0.8148</td>
-<td style="text-align:center">0.6974</td>
+<td style="text-align:center">0.8038</td>
+<td style="text-align:center">0.7634</td>
 </tr>
 </tbody>
 </table>
@@ -12446,24 +12446,24 @@ F1 score for test set: 0.7544.
 <tbody>
 <tr>
 <td style="text-align:center">100</td>
-<td style="text-align:center">0.0040</td>
-<td style="text-align:center">0.0080</td>
-<td style="text-align:center">0.8861</td>
-<td style="text-align:center">0.7559</td>
+<td style="text-align:center">0.0030</td>
+<td style="text-align:center">0.0020</td>
+<td style="text-align:center">0.8777</td>
+<td style="text-align:center">0.7746</td>
 </tr>
 <tr>
 <td style="text-align:center">200</td>
-<td style="text-align:center">0.0210</td>
-<td style="text-align:center">0.0070</td>
-<td style="text-align:center">0.8841</td>
-<td style="text-align:center">0.7698</td>
+<td style="text-align:center">0.0110</td>
+<td style="text-align:center">0.0050</td>
+<td style="text-align:center">0.8679</td>
+<td style="text-align:center">0.7815</td>
 </tr>
 <tr>
 <td style="text-align:center">300</td>
-<td style="text-align:center">0.0090</td>
-<td style="text-align:center">0.0060</td>
-<td style="text-align:center">0.8777</td>
-<td style="text-align:center">0.7581</td>
+<td style="text-align:center">0.0240</td>
+<td style="text-align:center">0.0130</td>
+<td style="text-align:center">0.8761</td>
+<td style="text-align:center">0.7838</td>
 </tr>
 </tbody>
 </table>
@@ -12481,23 +12481,23 @@ F1 score for test set: 0.7544.
 <tr>
 <td style="text-align:center">100</td>
 <td style="text-align:center">0.0030</td>
-<td style="text-align:center">0.0010</td>
-<td style="text-align:center">0.8919</td>
-<td style="text-align:center">0.7586</td>
+<td style="text-align:center">0.0000</td>
+<td style="text-align:center">0.8593</td>
+<td style="text-align:center">0.7647</td>
 </tr>
 <tr>
 <td style="text-align:center">200</td>
-<td style="text-align:center">0.0050</td>
+<td style="text-align:center">0.0080</td>
 <td style="text-align:center">0.0010</td>
-<td style="text-align:center">0.8718</td>
-<td style="text-align:center">0.7554</td>
+<td style="text-align:center">0.8562</td>
+<td style="text-align:center">0.7914</td>
 </tr>
 <tr>
 <td style="text-align:center">300</td>
-<td style="text-align:center">0.0060</td>
+<td style="text-align:center">0.0080</td>
 <td style="text-align:center">0.0010</td>
-<td style="text-align:center">0.8676</td>
-<td style="text-align:center">0.7544</td>
+<td style="text-align:center">0.8468</td>
+<td style="text-align:center">0.8060</td>
 </tr>
 </tbody>
 </table>
@@ -12590,7 +12590,7 @@ We make these prediction by making our model. To making a model here means we ar
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[63]:</div>
+<div class="prompt input_prompt">In&nbsp;[72]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># TODO: Import &#39;GridSearchCV&#39; and &#39;make_scorer&#39;</span>
@@ -12634,9 +12634,9 @@ We make these prediction by making our model. To making a model here means we ar
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Made predictions in 0.0010 seconds.
-Tuned model has a training F1 score of 0.8407.
-Made predictions in 0.0000 seconds.
-Tuned model has a testing F1 score of 0.7711.
+Tuned model has a training F1 score of 0.8358.
+Made predictions in 0.0010 seconds.
+Tuned model has a testing F1 score of 0.7778.
 </pre>
 </div>
 </div>
@@ -12661,8 +12661,8 @@ Tuned model has a testing F1 score of 0.7711.
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong>
-Final Model F1 score for training data is 0.8407 but testing data it is 0.7711.
-Before tuning the best F1 score on testing data is 0.7544. It seems that tuned model gives us the better score.</p>
+Final Model F1 score for training data is 0.8358 but testing data it is 0.7778.
+Before tuning the best F1 score on testing data is 0.8060. It seems that tuned model doesn't gives us the better score as compared than preliminary result.</p>
 
 </div>
 </div>
